fix: add to card input field was too small in some cases

--- a/src/ecwid-product-add-to-cart/style.scss
+++ b/src/ecwid-product-add-to-cart/style.scss
@@ -1,7 +1,5 @@
 .wp-block-peaches-ecwid-product-add-to-cart {
 	.input-group {
-		width: 6rem;
-
 		/* Chrome, Safari, Edge, Opera */
 		input::-webkit-outer-spin-button,
 		input::-webkit-inner-spin-button {
